# crazy_eight

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cards.c  cards.h  cards_test.c  eight-american.c  game.c  game.h
